# KPI_FaaS

./: README.md  contracts_codegen.py  docker-compose.nginx.yml  docker-compose.yml  faas.drawio  pyproject.toml
cloud/: code.py  function.py
cloud/runtime/: instance.py  runtime.py
contracts/: api_gateway_trigger_service.proto  auth_service.proto  common.proto  crontab_trigger_service.proto  function_service.proto  load_balancer_service.proto  node_agent_service.proto  runtime_service.proto
demo/ASAMPL/: Dockerfile  demo_function.asa  demo_invoker.py
demo/py/: demo_invoker.py
frontend/: .env.example  .eslintignore  .eslintrc.cjs  .prettierignore  Dockerfile  package-lock.json  package.json  svelte.config.js
frontend/src/: app.d.ts  app.html  hooks.server.ts
frontend/src/lib/auth/: index.ts  (+1 more)
frontend/src/routes/: +layout.svelte
nginx_proxy/: nginx.conf
node_agent/: debug_client.py  pyproject.toml  server.py
node_agent/auth_service/: service.py
node_agent/auth_service/contracts/faas/: __init__.py
node_agent/node_agent/: cfg.py  service.py
services/api_gateway_trigger_service/: .env  pyproject.toml  server.py
services/api_gateway_trigger_service/crontab_trigger_service/: cfg.py  models.py  service.py
services/auth_service/: .env  README.md  debug_client.py  pyproject.toml  server.py
services/auth_service/auth_service/: cfg.py  models.py  service.py
services/crontab_service/: pyproject.toml  server.py
services/crontab_service/crontab_service/: cfg.py
services/crontab_trigger_service/: .env  Dockerfile  pyproject.toml  server.py
services/crontab_trigger_service/crontab_trigger_service/: models.py  service.py
services/crontab_trigger_service/crontab_trigger_service/contracts/faas/: __init__.py
services/function_service/: .env  Dockerfile  pyproject.toml  server.py
services/function_service/function_service/: models.py  service.py
services/function_service/function_service/contracts/faas/: __init__.py
services/load_balancer_service/: debug_client.py  pyproject.toml  server.py
services/load_balancer_service/load_balancer_service/: cfg.py  service.py
services/runtime_service/: .env  Dockerfile  README.md  debug_runtime_service.py  pyproject.toml  server.py
services/runtime_service/runtime_service/: cfg.py  docker_image.py  models.py  service.py
tools/proto_to_uml/: Dockerfile  convert_to_mermaid.sh  main  main.go
tools/proto_to_uml/uml/: auth_service.proto.md  common.proto.md  runtime_service.proto.md
(+92 files in other folders)
