[tool.poetry]
name = "node_agent"
version = "0.1.0"
description = ""
authors = ["Stanislav Bobokalo <stas.gurland@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11 <3.12"
betterproto = {version = "2.0.0b6", extras = ["compiler"]}
sqlalchemy = "^2.0.29"
bcrypt = "^4.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
